# vapor-manager

./: .gitignore  .rustfmt.toml  Cargo.toml  Dioxus.toml  README.md  README.org  build.rs  flake.nix  package-lock.json  package.json  tailwind.config.js  tauri.conf.json
.cargo/: config.toml
benches/: shared_memory.rs
icons/: icon.clip  icon.rgba
src/: app.rs  input.css  lib.rs  main.rs
src/actors/: broadcast.rs  fuel_calculator.rs  mod.rs  router.rs  telemetry.rs  ui.rs
src/actors/setup_manager/: meta.rs  mod.rs  setup.rs  setup_file.rs
src/components/: base.rs  debug.rs  fuel_calculator.rs  laps.rs  mod.rs  settings.rs  setups.rs  status_bar.rs  theme.rs  wheels.rs
src/components/input/: input_number.rs  mod.rs
src/setup/: 21c_26c_aud_base.json  data.rs  manager.rs  meta.rs  mod.rs  setup.rs  test.rs
src/telemetry/: conversion.rs  data.rs  laphistory.rs  mod.rs
src/telemetry/broadcast/: broadcasting_event.rs  data.rs  debugger.rs  entrylist.rs  framed.rs  lapinfo.rs  mod.rs  realtime_car_update.rs  realtime_update.rs  registration.rs  runtime.rs  track_data.rs
src/telemetry/shm/: conversion.rs  graphics.rs  laphistory.rs  mod.rs  physics.rs  static.rs
src/ui/: mod.rs
src/ui/components/: base.rs  debug.rs  fuel_calculator.rs  laps.rs  mod.rs  settings.rs  setups.rs  status_bar.rs  theme.rs
src/ui/components/input/: input_number.rs
src/widgets/: mod.rs  session.rs  setup.rs  tyres.rs
