[package]
name = "acc-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.27.0", features = [] }
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["rt", "net"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"

thiserror = "1"

windows = { version = "0.54", features = ["Win32", "Win32_System", "Win32_System_Memory"] }
known-folders = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "shared_memory"
harness = false
