[package]
name = "vapor-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["desktop", "router"] }
manganis = "0.2"
futures-util = "0.3"
futures-channel = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["rt", "net"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"

thiserror = "1"

windows = { version = "0.54", features = ["Win32", "Win32_System", "Win32_System_Memory"] }
known-folders = "1"

nom = "7"
num_enum = "0.7"
strum = { version = "0.26", features = ["derive"] }