[package]
name = "vapor-manager"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["desktop", "router"] }
futures = "0.3"
futures-util = "0.3"
futures-channel = "0.3"

actix = "0.13"

tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1", features = ["rt", "net"] }
tokio-util = { version = "0.7", features = ["net", "codec"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"

thiserror = "1"

windows = { version = "0.54", features = [
    "Win32",
    "Win32_System",
    "Win32_System_Memory",
] }
known-folders = "1"

nom = "7"
num_enum = "0.7"
strum = { version = "0.26", features = ["derive"] }

paste = "1"

[features]
default = []

debugger = []

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
